# stm32f429i-disc

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
examples/: button_read.rs  gpio_hal_blinky.rs  i2c_hal_ssd1306alphabeter.rs  i2c_hal_ssd1306helloworld.rs  leds.rs  serial_echo.rs
src/: led.rs  lib.rs
testsuite/: Cargo.toml
testsuite/tests/: test.rs
tools/: capture_example_bloat.sh
